# multi-model-review

./: .gitignore  CLAUDE.md  README.md  multi-model-review  pyproject.toml
multi_model_review/: __init__.py  cli.py  deriv_prompt.py  deriv_report.py  deriv_reviewer.py  fetcher.py  prompt.py  ref_prompt.py  ref_report.py  ref_reviewer.py  refs.py  report.py  reviewer.py
multi_model_review/data/: SKILL.md
